--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Asteroids Game
 	<head>
 		<meta charset="utf-8">
 		<title>Title</title>
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Asteroids Game</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Use the arrow keys to move. Up and Down to accelerate. Left and Right to rotate. Press h for hyperspace.
 	    </footer>
 	</body>
 </html>
