--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-Asteroids Game
+<!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Asteroids Game</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -15,7 +15,16 @@ Asteroids Game
 				</canvas>
 		    </section>
 	    <footer>
-		    Use the arrow keys to move. Up and Down to accelerate. Left and Right to rotate. Press h for hyperspace.
+		    Use the arrow keys to move.  
+		</footer>
+		<footer>
+		    Up and Down to accelerate.
+		</footer>
+		<footer>
+		    Left and Right to rotate.
+		</footer>
+		<footer>
+		     Press h for hyperspace.
 	    </footer>
 	</body>
 </html>
