--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		</footer>
 		<footer>
 		     Press h for hyperspace.
-	    </footer>
+	    	</footer>
+	    	<footer>
+	    	    Use the spacebar to shoot.
+	    	</footer>
 	</body>
 </html>
