--- a/index.html
+++ b/index.html
@@ -15,19 +15,13 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Use the arrow keys to move.  
+		    Use the arrow keys to move.		Up and Down to accelerate.	Left and Right to rotate.
 		</footer>
 		<footer>
-		    Up and Down to accelerate.
+
 		</footer>
 		<footer>
-		    Left and Right to rotate.
-		</footer>
-		<footer>
-		     Press h for hyperspace.
-	    	</footer>
-	    	<footer>
-	    	    Use the spacebar to shoot.
+		     Press h for hyperspace.		Use the spacebar to shoot.
 	    	</footer>
 	</body>
 </html>
